compiler/loopopts/TestPartialPeelingSinkNodes.java crashes with -XX:+VerifyGraphEdges

XMLWordPrintable

    • b29

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007ff0b1b1e806, pid=26531, tid=26547
        #
        # JRE version: OpenJDK Runtime Environment (18.0) (slowdebug build 18-internal+0-adhoc.jvm.jdk-0628)
        # Java VM: OpenJDK 64-Bit Server VM (slowdebug 18-internal+0-adhoc.jvm.jdk-0628, compiled mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x5b2806] Unique_Node_List::member(Node*)+0x1c
        #

        Current CompileTask:
        C2: 1473 1 b compiler.loopopts.TestPartialPeelingSinkNodes::test (172 bytes)

        Stack: [0x00007ff03f3fc000,0x00007ff03f4fd000], sp=0x00007ff03f4f7190, free space=1004k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x5b2806] Unique_Node_List::member(Node*)+0x1c
        V [libjvm.so+0xf71d4f] Node::verify_edges(Unique_Node_List&)+0x23
        V [libjvm.so+0x7d4330] Compile::verify_graph_edges(bool)+0x5e
        V [libjvm.so+0xe14a3c] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x1462
        V [libjvm.so+0x7da0cd] PhaseIdealLoop::PhaseIdealLoop(PhaseIterGVN&, LoopOptsMode)+0xf5
        V [libjvm.so+0x7da2be] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x46
        V [libjvm.so+0x7cd2ed] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode)+0xf7
        V [libjvm.so+0x7ce1f2] Compile::Optimize()+0xd62
        V [libjvm.so+0x7c7333] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x13cd
        V [libjvm.so+0x6b7b1a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x144
        V [libjvm.so+0x7e47c7] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x97d
        V [libjvm.so+0x7e32fb] CompileBroker::compiler_thread_loop()+0x3dd
        V [libjvm.so+0x803935] CompilerThread::thread_entry(JavaThread*, JavaThread*)+0x69
        V [libjvm.so+0x1284c83] JavaThread::thread_main_inner()+0x18b
        V [libjvm.so+0x1284aeb] JavaThread::run()+0x1e7
        V [libjvm.so+0x1282438] Thread::call_run()+0x180
        V [libjvm.so+0xfbfc1d] thread_native_entry(Thread*)+0x18f

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: