8269517: compiler/loopopts/TestPartialPeelingSinkNodes.java crashes with -XX:+VerifyGraphEdges

Backport-of: 7010dfdffab3582d7f5e935247735dff1b3152e6